--- a/compiled.css
+++ b/compiled.css
@@ -1,6 +1,6 @@
-@import url("https://luckfire.github.io/theme-source/src/css-compile/ThemeSource-Compiled.css");
-@import url("https://nyri4.github.io/Discolored/main.css");
-@import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
+@import url(https://raw.githubusercontent.com/overridedamage/darkcord/main/ThemeSource-Compiled.css");
+@import url("https://raw.githubusercontent.com/overridedamage/darkcord/main/main.css");
+@import url("https://raw.githubusercontent.com/overridedamage/darkcord/main/usrbg.css");
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
 #app-mount .scrollerBase-289Jih.disableScrollAnchor-3V9UtP::-webkit-scrollbar-thumb,
