--- a/compiled.css
+++ b/compiled.css
@@ -1,4 +1,4 @@
-@import url(https://raw.githubusercontent.com/overridedamage/darkcord/main/ThemeSource-Compiled.css");
+@import url("https://raw.githubusercontent.com/overridedamage/darkcord/main/ThemeSource-Compiled.css");
 @import url("https://raw.githubusercontent.com/overridedamage/darkcord/main/main.css");
 @import url("https://raw.githubusercontent.com/overridedamage/darkcord/main/usrbg.css");
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
